# Weather-bot-in-cpp

./: .clangd  CMakeLists.txt
data/: commands_info.json
src/: main.cpp
src/database/: database.h
src/event_listeners/: ready.cpp  ready.h  slashcommand.cpp  slashcommand.h
src/utils/: utils.cpp  utils.h
